--- a/Django/projeto_hotel/templates/cadastro.html
+++ b/Django/projeto_hotel/templates/cadastro.html
@@ -166,7 +166,7 @@
   <input type="text" id="estado" name="estado" required>
 
 
-  <label for="tipo">Tipo documento</label>
+  <label for="tipo">Tipo de Documento</label>
   <select id="tipo" name="tipo_documento" required>
     <option selected>Tipo documento</option>
     <option>CPF</option>
@@ -180,6 +180,20 @@
 
   <label for="documento">Documento</label>
   <input type="text" id="documento" name="documento" required>
+
+  <label for="tipo">Tipo de Quarto</label>
+  <select id="tipo" name="tipo_quarto" required>
+    <option selected>Tipo do Quarto</option>
+    <option>Quarto com uma cama de solteiro</option>
+    <option>Quarto com duas camas de solteiro</option>
+    <option>Quarto com uma cama de casal</option>
+    <option>Quarto com duas cama de casal</option>
+    <option>Quarto com uma cama de casal e uma de solteiro</option>
+    <option>Quarto com duas cama de casal e duas de solteiro</option>
+  
+
+  </select>
+
 
   <label for="data">Check-in</label>
   <input type="date" id="data" name="data" required>
