--- a/Django/projeto_hotel/templates/feedback_confirmacao.html
+++ b/Django/projeto_hotel/templates/feedback_confirmacao.html
@@ -4,8 +4,183 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Estrela do Mar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
-<body>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 20px;
+        
+    }
+  
+    .navbar {
+          background-color: red;
+          box-shadow: 0px 1px 6px rgba(111, 0, 0, 0.486);
+          padding-left: 10px;
+        }
+  
+  
+      .navbar .nav-link {
+        color: rgb(200, 19, 19);
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 17px;
+        font-weight: bold;
+        letter-spacing: 1px;
+        padding-left: 7px;
+        text-shadow: 1px 1px 3px rgba(255, 0, 0, 0.078);
+        transition: color 0.1s ease;
+      }
+  
+  
+      .navbar .nav-link:hover {
+        color: rgb(228, 1, 1);
+      }
+  
+      .navbar-brand {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 25px;
+        padding: 5px 10px;
+        text-shadow: 0px -1px 1px rgb(255, 255, 255);
+        color: rgb(200, 19, 19);
+        transition: color 0.3s ease;
+        letter-spacing: 0px;
+      }
+  
+      .navbar-brand:hover {
+        color:  rgb(200, 19, 19);
+        text-shadow: 0px -1px 2px rgb(255, 255, 255);
+      }
+  
+   .container {
+          max-width: 1300px;
+          margin: auto;
+          background: white;
+          padding: 30px;
+          border-radius: 5px; 
+            
+           }
+  
+        h1 {
+          font-size: 46px;
+          color: rgb(200, 19, 19);
+          padding-top: 50px;
+          padding-bottom: 50px;
+          text-align: center;
+          text-shadow: 0px -1px 1px black;
+        }
+  
+        p{
+          font-size: 25px;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          padding-bottom: 10px;
+          text-align: center;
+
+          color: rgb(106, 16, 16);
+          
+          
+  
+        }
+  
+        #a{
+            text-align: center;
+            font-size: 19px;
+            padding-top: 10px;
+            padding-left: 610px;
+            padding-right: 600px;
+            padding-bottom: 10px;
+        }
+  
+        #a:hover{
+          box-shadow: 0px 10px 10px rgb(162, 14, 14);
+  
+        }
+  
+    label {
+        display: block;
+        margin: 10px 0 5px;
+    }
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="tel"],
+    input[type="date"],
+  
+    select {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 15px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+    input[type="submit"] {
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+        border-radius: 4px;
+    }
     
-</body>
-</html>
+  </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href=""><b>Hotel Estrela do Mar</b></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="/home">Início</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/lazerbemestar">Lazer e Bem-Estar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/aluguelcarro">Aluguel de Carro</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/feedback">Tem alguma dúvida? Fale conosco!</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
+            </li>
+          
+          </ul>
+          
+        </div>
+      </div>
+    </nav>
+  
+    <div class="container">
+      <h1><b>Enviado &#10003;</b></h1>
+  
+      <p>Feedback Enviado com sucesso!!</p>
+  
+      <br>
+      
+      <a id="a" href="/home" class="btn btn-outline-danger">Voltar</a>
+  
+    
+  
+         
+    
+    </div>
+  
+      
+  
+      
+  
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      
+  </body>
+  </html>
